...

  final _drawer = AdvancedDrawerController();

  @override
  Widget build(BuildContext context) {
    return GetBuilder(
      key: const ValueKey("mainPage"),
      init: controller,
      builder: (ctx) {
        return AdvancedDrawer(
          backdropColor: MYColor.primary,
          controller: _drawer,
          animationCurve: Curves.easeInOut,
...
