...
  const MainHomePageView({Key? key}) : super(key: key);
  @override
  Widget build(BuildContext context) {
    return GetBuilder(
      init: controller,
      builder: (_) => Scaffold(
        key: const ValueKey("mainHomePage"),
        appBar: _appBar(context),
        body: _body(context),
        bottomNavigationBar: Obx(
          () {
            return Container(
              height: 85,
...
